# rust-sgx-sdk-1

./: gelsgx.sh
samplecode/http_req/app/: Cargo.toml
samplecode/http_req/app/src/: main.rs
samplecode/http_req/enclave/: Cargo.toml
samplecode/http_req/enclave/src/: lib.rs
samplecode/logger/enclave/: Cargo.toml
samplecode/logger/enclave/src/: lib.rs
samplecode/mio-ra/: README.md
samplecode/mio-ra/mio-ra-client-java/: pom.xml
samplecode/mio-ra/mio-ra-client-java/src/main/java/org/rustsgx/mioraclientjava/: Communications.java  MioRaClientJavaApplication.java
samplecode/mio-ra/mio-ra-client-java/src/main/java/org/rustsgx/mioraclientjava/bean/: ComputeResult.java  Datatype.java  SGXReport.java  Student.java  Teacher.java
samplecode/mio-ra/mio-ra-client-java/src/main/java/org/rustsgx/mioraclientjava/raverify/: CommonUtils.java  HMAC_SHA1.java  PemReader.java  PlatformInfoBlob.java  QuoteReportData.java  ServerCertData.java  SgxCertVerifier.java  SgxQuoteReport.java  VerifyMraCert.java
samplecode/mio-ra/mio-ra-client-java/src/test/java/org/rustsgx/mioraclientjava/: MioRaClientJavaApplicationTests.java
samplecode/mio-ra/mio-ra-server/: Makefile
samplecode/mio-ra/mio-ra-server/app/src/: main.rs
samplecode/mio-ra/mio-ra-server/enclave/: Cargo.toml  Enclave.edl  Makefile
samplecode/mio-ra/mio-ra-server/enclave/src/: lib.rs
samplecode/mio-ra/mio-ra-server/enclave/src/logger/: logdemo.rs  mod.rs
samplecode/mio-ra/mio-ra-server/enclave/src/mioserver/: mio_server.rs  mod.rs
samplecode/mio-ra/mio-ra-server/enclave/src/sgxcert/: cert.rs  hex.rs  hmac_sha1.rs  mod.rs
sgx_db/sqlite3/: Makefile  build.sh  buildhellosqlite3.sh
sgx_db/sqlite3/ocall/: ocall_interface.c  ocall_sql.h
