[package]
name = "Httpreqenclave"
version = "1.0.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2018"

[lib]
name = "httpreqenclave"
crate-type = ["staticlib"]

[dependencies]
http_req = { path = "../../../third_party/http_req" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { path = "../../../sgx_types" }
sgx_tstd    = { path = "../../../sgx_tstd", features = ["net", "untrusted_fs"] }
