[package]
name = "mioRA"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "miora"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types   = { path = "../../../../sgx_types" }
sgx_tstd    = { path = "../../../../sgx_tstd", features = ["net", "untrusted_fs"] }
sgx_tcrypto = { path = "../../../../sgx_tcrypto" }
sgx_tse     = { path = "../../../../sgx_tse"}
sgx_rand    = { path = "../../../../sgx_rand"}

[dependencies]
mio         = { path = "../../../../third_party/mio" }
log         = { path = "../../../../third_party/log", features = ["std"] }
log_gel     = { path = "../../../../third_party/mesalock-sgx/log-sgx" }
env_logger_gel = { path = "../../../../third_party/mesalock-sgx/env_logger-sgx" }
chrono      = { path = "../../../../third_party/chrono" }
webpki      = { path = "../../../../third_party/webpki" }
base64      = { path = "../../../../third_party/rust-base64" }
yasna       = { path = "../../../../third_party/yasna.rs" }
num-bigint  = { path = "../../../../third_party/num/bigint" }
bit-vec     = { path = "../../../../third_party/bit-vec", default-features = false}
httparse    = { version = "1.3.2", default-features=false }
itertools   = { version = "0.7.8" , default-features = false, features = []}
rustls      = { path = "../../../../third_party/rustls" }
webpki-roots= { path = "../../../../third_party/webpki-roots" }
sha1        = { path = "../../../../third_party/gel-sgx/rust-sha1" }
rusthex     = { path = "../../../../third_party/gel-sgx/rust-hex" }
serde_json  = { path = "../../../../third_party/serde-rs/json"}
serde       = { path = "../../../../third_party/serde-rs/serde/serde" }
serde_derive = { path = "../../../../third_party/serde-rs/serde/serde_derive" }
rust-sqlite = { path = "../../../../third_party/gel-sgx/rust-sqlite3" }
sgx_untrusted_time  = { path = "../../../../third_party/time" }

